src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwindcss /nesting;

:root {
  --theme-color: #0046be;
  --background-color: #ffffff;
  --accent-color: #fff200;
  --header-color: #040c13;
  --body-color: #1d252c;
  --link-color: #0457c8;
}

@layer base {
  section {
    @apply mb-12 xl:mb-24;
  }
}

@layer utilities {
  .min-h-screen {
    min-height: 100vh;
  }
  @supports (min-height: 100dvh) {
    .min-h-screen {
      min-height: 100dvh;
    }
  }
}

::selection {
  @apply bg-theme text-white;
}

/* Styles for pinned-product section */
#pinned-product {
  --swiper-pagination-color: #001e73;
  --swiper-pagination-bullet-width: 10px;
  --swiper-pagination-bullet-height: 10px;

  & .swiper-wrapper {
    @apply pb-4 pt-8;
  }

  & .swiper-pagination-bullet:hover {
    --swiper-pagination-bullet-inactive-color: var(--theme-color);
    --swiper-pagination-bullet-inactive-opacity: 1;
  }

  & .swiper-prev-shadow:has(button:not(:disabled)) {
    box-shadow: 16px 0 30px -20px rgba(0, 0, 0, 0.5);
    z-index: 5;
  }

  & .swiper-next-shadow:has(button:not(:disabled)) {
    box-shadow: -16px 0 30px -20px rgba(0, 0, 0, 0.5);
    z-index: 5;
  }

  & .swiper-pagination {
    position: static;
  }
}

